objects/Action__c.object
<CustomObject>
    <description>It will consist all the actions(Field update, Email Alert, Task, Outbound Message, Methods)</description>
    <fields>
        <fullName>Change_Description__c</fullName>
        <description>Modifications done in the component.</description>
        <label>Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <description>Who has made the modification in the component.</description>
        <label>Changed By</label>
        <picklist>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitesh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Controller where the method is used.</description>
        <label>Controller</label>
        <referenceTo>Controller__c</referenceTo>
        <relationshipLabel>Related Methods</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>It captures all the details about the component</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <description>Name of the email template.</description>
        <label>Email Template Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <label>Endpoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <description>Type of the field which is getting updated.</description>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date/Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_to_Update__c</fullName>
        <description>Which field is updated through this action.</description>
        <label>Field to Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Email_Address__c</fullName>
        <description>Sender of the email alert.</description>
        <label>From Email Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <description>New value of the updated field.</description>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipients__c</fullName>
        <description>The recipients of the email alert.</description>
        <label>Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of  user story, change request, ticket which impacts the components.</description>
        <label>Request</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_to_send_as__c</fullName>
        <label>User to send as</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <recordTypes>
        <fullName>Email_Alert</fullName>
        <active>true</active>
        <description>Email alert fired due to workflow rule, approval process, approval step.</description>
        <label>Email Alert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Field_Update</fullName>
        <active>true</active>
        <description>Field update due to workflow rule, approval process, approval step, trigger.</description>
        <label>Field Update</label>
    </recordTypes>
    <recordTypes>
        <fullName>Method</fullName>
        <active>true</active>
        <description>Methods used in controllers.</description>
        <label>Method</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outbound_Message</fullName>
        <active>true</active>
        <label>Outbound Message</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>